syntax = "proto3";

package otp_proto;

option go_package = "generated/proto/otp_proto";

message OtpUserVerifyEmailPayload {
  int64 user_id = 1;
  string email = 2;
  bool is_verified = 3;
}

message OTP {
  oneof payload {
    OtpUserVerifyEmailPayload user_verify_email = 1;
  }
}